--- a/jquery.textplayer.css
+++ b/jquery.textplayer.css
@@ -3,9 +3,9 @@
 	background-color: #fff;
 }
 
-.codeMovieContent { overflow: auto; }
+.textPlayerContent { overflow: auto; }
 
-.code-movie-outer-container:fullscreen .codeMovieContent {
+.code-movie-outer-container:fullscreen .textPlayerContent {
 		height: calc(100% - 50px) !important;
 		width: 100% !important;
 }
